--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -9,5 +9,9 @@
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_baseline_person_24"
         android:title="Profile" />
+    <item
+        android:id="@+id/nav_third"
+        android:icon="@drawable/ic_baseline_add_circle_outline_24"
+        android:title="Add kar diyo" />
 
 </menu>
