--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -9,18 +9,18 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="560dp"
         android:padding="16dp">
 
 
         <ImageView
-            android:id="@+id/img"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:id="@+id/image"
+            android:layout_width="268dp"
+            android:layout_height="340dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="174dp"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
@@ -32,7 +32,7 @@
             android:textColor="#000"
             android:textSize="25dp"
             android:textStyle="bold"
-            android:layout_toRightOf="@id/img"
+            android:layout_toRightOf="@id/image"
             android:gravity="center_vertical"
             />
 
@@ -41,8 +41,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
-            android:layout_toRightOf="@id/img"
+            android:layout_toRightOf="@id/image"
             android:layout_below="@+id/t"
+            android:text="This is Description Text"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/t3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/t"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="31dp"
+            android:layout_toRightOf="@id/image"
             android:text="This is Description Text"
             android:textSize="20dp" />
 
