--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backk"
+    android:background=""
     tools:context=".loginOrRegister">
 
     <TextView
@@ -52,14 +52,12 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/textView4" />
 
-    <Button
-        android:id="@+id/editorLogin"
-        android:layout_width="332dp"
-        android:layout_height="53dp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="373dp"
+        android:layout_height="253dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/login"
-        android:layout_marginTop="58dp"
-        android:background="@drawable/round2"
-        android:text="Login as an editor (Only for editors)"
-        android:textColor="#ffffff" />
+        android:layout_marginTop="20dp"
+        android:src="@drawable/tree" />
+
 </RelativeLayout>
