--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -11,7 +11,7 @@
         android:title="Profile" />
     <item
         android:id="@+id/nav_third"
-        android:icon="@drawable/ic_baseline_add_circle_outline_24"
-        android:title="Add kar diyo" />
+        android:icon="@drawable/ic_baseline_account_circle_24"
+        android:title="My Account" />
 
 </menu>
