Initial UI/UX commit

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/register_bg"
+    android:background="@drawable/plain_background"
     tools:context=".createAccount">
 
     <TextView
@@ -13,9 +13,9 @@
         android:layout_height="103dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="17dp"
-        android:shadowColor="#FFFFFF"
+        android:shadowColor="#000000"
         android:text="You're a few steps away from accessing the news related to education around you. Please fill these fields and then we'll send you OTP on your phone..."
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,10 +42,10 @@
         android:ems="10"
         android:hint="Enter your name"
         android:inputType="textPersonName"
-        android:shadowColor="#FFFFFF"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textColorLink="#FFFFFF"
+        android:shadowColor="#000000"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -60,8 +60,8 @@
         android:ems="10"
         android:hint="Enter you area pin code"
         android:inputType="number"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/city" />
@@ -76,9 +76,9 @@
         android:ems="10"
         android:hint="Enter phone number"
         android:inputType="phone"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ccp"
         app:layout_constraintTop_toBottomOf="@+id/name" />
@@ -93,8 +93,8 @@
         android:ems="10"
         android:hint="Enter city"
         android:inputType="textPersonName"
-        android:textColor="#FDFDFD"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -109,9 +109,9 @@
         android:ems="10"
         android:hint="Enter username"
         android:inputType="textEmailAddress"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/no" />
