--- a/app/src/main/res/layout/enterotp.xml
+++ b/app/src/main/res/layout/enterotp.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0d699c">
+    android:background="@drawable/otp_backk">
 
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="200dp"
