--- a/app/src/main/res/drawable/round3.xml
+++ b/app/src/main/res/drawable/round3.xml
@@ -6,8 +6,8 @@
     <corners android:radius="10dp"/>
     <gradient
         android:angle="135"
-        android:centerColor="#000000"
-        android:endColor="#000000"
-        android:startColor="#000000"
+        android:centerColor="#ffffff"
+        android:endColor="#ffffff"
+        android:startColor="#ffffff"
         android:type="linear" />
 </shape>
