--- a/app/src/main/res/drawable/round4.xml
+++ b/app/src/main/res/drawable/round4.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="#a0d4cc" />
+        android:color="#FF0000" />
     <corners android:radius="10dp"/>
     <gradient
         android:angle="135"
