--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#a0d4cc"
     tools:context=".loginOrRegister">
 
     <TextView
@@ -15,7 +16,7 @@
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_centerHorizontal="true"/>
+        android:layout_marginLeft="20dp"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -51,12 +52,24 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/textView4" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="373dp"
-        android:layout_height="253dp"
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/tre"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/tre"></pl.droidsonroids.gif.GifImageView>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/tre"
         android:layout_marginTop="20dp"
-        android:src="@drawable/tree" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:text="Greener" />
 
 </RelativeLayout>
