--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -75,12 +75,13 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="225dp"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:textStyle="bold"
         android:layout_height="64dp"
         android:layout_marginTop="60dp"
+        android:gravity="center"
         android:text="my points"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
