--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -42,15 +42,18 @@
 
         <TextView
             android:id="@+id/item_city"
-            android:layout_width="50dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <Button
             android:id="@+id/map"
+            android:background="@drawable/round3"
+            android:textColor="#000000"
+            android:layout_marginTop="30dp"
             android:layout_width="128dp"
-            android:layout_height="82dp"
+            android:layout_height="52dp"
             android:text="show on map" />
 
     </LinearLayout>
