--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,8 +7,8 @@
         android:title="Home" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_baseline_person_24"
-        android:title="Profile" />
+        android:icon="@drawable/ic_baseline_add_circle_24"
+        android:title="Publish Article" />
     <item
         android:id="@+id/nav_third"
         android:icon="@drawable/ic_baseline_account_circle_24"
